<resources>
    <string name="app_name">My App Portfolio</string>
    
    <!--MainActivity-->
    <string name="main_describe">My Nanodegree Apps!</string>
    <string name="main_popular_movies">POPULAR MOVIES</string>
    <string name="main_stock_hawk">STOCK HAWK</string>
    <string name="main_bulid_it_bigger">BUILD IT BIGGER</string>
    <string name="main_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="main_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="main_capstone">CAPSTONE</string>

</resources>
