<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jeromeyang.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/activity_main_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/main_describe"
        android:textColor="@android:color/black"
        android:textSize="19sp" />

    <Button style="@style/button"
        android:id="@+id/popular_movies"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/activity_main_describe"
        android:text="@string/main_popular_movies"
        />

    <Button style="@style/button"
        android:id="@+id/stock_hawk"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/popular_movies"
        android:text="@string/main_stock_hawk"
        />

    <Button style="@style/button"
        android:id="@+id/bigger"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/stock_hawk"
        android:text="@string/main_bulid_it_bigger"
        />

    <Button style="@style/button"
        android:id="@+id/material"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/bigger"
        android:text="@string/main_make_your_app_material"
        />

    <Button style="@style/button"
        android:id="@+id/ubiquitous"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/material"
        android:text="@string/main_go_ubiquitous"
        />

    <Button style="@style/button"
        android:id="@+id/capstone"
        android:layout_alignStart="@+id/activity_main_describe"
        android:layout_alignEnd="@+id/activity_main_describe"
        android:layout_below="@+id/ubiquitous"
        android:text="@string/main_capstone"
        />


</RelativeLayout>
